[gd_scene load_steps=19 format=3 uid="uid://bpwd8fdh01307"]

[ext_resource type="Script" path="res://Scripts/player_test.gd" id="1_lk18g"]
[ext_resource type="Texture2D" uid="uid://dtcsuvolfdmus" path="res://assets/sprite_sheets/char_1_no_back_ground_fix.png" id="2_bw24s"]
[ext_resource type="Texture2D" uid="uid://jxa8fb6j6qip" path="res://assets/images/profile_player1-2.png" id="3_l86cj"]
[ext_resource type="Script" path="res://Scripts/health_bar_player_1.gd" id="4_7ed7i"]
[ext_resource type="Texture2D" uid="uid://cw0eqnsuebrkf" path="res://assets/images/barra_fondo2.png" id="5_7whxq"]
[ext_resource type="Texture2D" uid="uid://bpk7q3bdr10tv" path="res://assets/images/barra_mascara2.png" id="6_q04li"]
[ext_resource type="Texture2D" uid="uid://bopejjwmx53wg" path="res://assets/images/relleno2.png" id="7_03t3r"]
[ext_resource type="Script" path="res://Scripts/texture_progress_bar_player1.gd" id="7_n7t0n"]

[sub_resource type="Animation" id="Animation_ux0jw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_hutc6"]
resource_name = "attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5), Vector2i(6, 5), Vector2i(7, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_grw78"]
resource_name = "hit"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(7, 3)]
}

[sub_resource type="Animation" id="Animation_20w3m"]
resource_name = "jump_down"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(7, 3), Vector2i(9, 3)]
}

[sub_resource type="Animation" id="Animation_kth8f"]
resource_name = "jump_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3)]
}

[sub_resource type="Animation" id="Animation_wptpr"]
resource_name = "run"
length = 2.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1), Vector2i(8, 1), Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wkf4v"]
_data = {
"RESET": SubResource("Animation_ux0jw"),
"attack": SubResource("Animation_hutc6"),
"hit": SubResource("Animation_grw78"),
"jump_down": SubResource("Animation_20w3m"),
"jump_up": SubResource("Animation_kth8f"),
"run": SubResource("Animation_wptpr")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y33gp"]
radius = 12.0
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_02h41"]
radius = 7.0
height = 32.0003

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2hvdk"]
radius = 17.0
height = 40.0

[node name="player_test" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 7
script = ExtResource("1_lk18g")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_bw24s")
hframes = 10
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_wkf4v")
}
speed_scale = 1.7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-13, 6)
shape = SubResource("CapsuleShape2D_y33gp")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(19, -2)
rotation = 1.57093
shape = SubResource("CapsuleShape2D_02h41")
disabled = true
debug_color = Color(0.85558, 0.306002, 0.527819, 0.42)

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-15, 4)
shape = SubResource("CapsuleShape2D_2hvdk")
debug_color = Color(0.969743, 0.139159, 0.271569, 0.42)

[node name="HitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(20, 19)
scale = Vector2(0.0652685, 0.0652685)
texture = ExtResource("3_l86cj")

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer" node_paths=PackedStringArray("player")]
visible = false
offset_left = 37.0
offset_top = 2.0
offset_right = 108.0
offset_bottom = 29.0
value = 100.0
script = ExtResource("4_7ed7i")
player = NodePath("../..")

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer" node_paths=PackedStringArray("player")]
offset_left = 35.0
offset_top = 23.0
offset_right = 2800.0
offset_bottom = 256.0
scale = Vector2(0.04, 0.04)
texture_under = ExtResource("5_7whxq")
texture_over = ExtResource("6_q04li")
texture_progress = ExtResource("7_03t3r")
script = ExtResource("7_n7t0n")
player = NodePath("../..")

[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_blink_timer_timeout"]
